tests/fixtures/errors/bad_field_access.ore
type Point { x:Int, y:Int }

fn main
  p := Point(x: 1, y: 2)
  print p.z
